# MarkdownExporter

./: .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  INTEGRATION_SUMMARY.md  README.md  USAGE.md  config.yaml  docker-compose.yml  pyproject.toml  simple_api_server.py  simple_mcp_server.py
config/: header_footer.yaml
docs/: project_plan.md
src/: __init__.py
src/cli/: __init__.py  converter.py
src/config/: __init__.py  header_footer_config.py  settings.py
src/core/: __init__.py  converters.py  markdown_converter.py  processor.py
src/logging_module/: __init__.py  logger.py
src/mcp/: __init__.py  client.py  server.py  tools.py
tests/: sample.md  test_basic.py  test_mcp_conversion.py  test_mcp_integration.py  test_word_converter.py
